--- a/test/public/index.html
+++ b/test/public/index.html
@@ -8,7 +8,8 @@
     <script src="dist/rtquery.js"></script>
 </head>
 <body>
-    
+    <div id="root"></div>
+    <div id="app"></div>
     <script src="includes/main.js"></script>
 </body>
 </html>
